--- a/thirtyfive/src/styles/index.css
+++ b/thirtyfive/src/styles/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Inconsolata&family=Roboto:wght@100;400;700&display=swap');
 
 @import-normalize;
+@import url('./moviedetail.css');
+@import url('./display.css');
 
 :root {
   --main-bg: #111111;
@@ -18,19 +20,17 @@ html {
   font-size: 16px;
   color: var(--text);
   font-family: var(--roboto);
+  letter-spacing: 1px;
+  font-weight: 100;
 }
 
-.flex {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.flex-col {
-  flex-direction: column;
+a {
+  text-decoration: none;
+  color: var(--text);
 }
 
-.flex-row {
-  flex-direction: row;
+img {
+  border-radius: 5px
 }
 
 .title {
@@ -40,7 +40,6 @@ html {
 }
 
 #main-nav {
-  width: 50vw;
   margin: 0 auto;
 }
 
@@ -80,6 +79,32 @@ html {
   height: 300px;
 }
 
+
 h1 {
   color: var(--accent);
+}
+
+.randoms {
+  width: 1120px;
+  margin: 0 auto;
+}
+
+.randoms h1 {
+  width: 100%;
+}
+.randomcard {
+  width: 540px;
+  background: var(--card-bg);
+  margin: 10px;
+  border-radius: 5px;
+}
+
+.randominfo h2 {
+  margin-bottom: 20px;
+  font-size: 1.5em;
+}
+
+.randominfo {
+  width: 300px;
+  padding: 20px;
 }
